--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "smart-home/api",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "totoro-node": "^2.0.5"
   }
 }
