--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "api-smart-home",
   "version": "1.0.0",
   "description": "This is API for smart home system",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "forever start --minUptime 1000 --spinSleepTime 1000 app.js",
-    "stop": "forever stop app.js",
-    "test": "test"
+    "start": "forever start --minUptime 1000 --spinSleepTime 1000 server.js",
+    "stop": "forever stop server.js",
+    "test": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "forever": "^3.0.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.4",
     "totoro-node": "^2.0.5"
   }
 }
